--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.18.2",
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.3",
     "morgan": "~1.9.1"
   }
 }
